website/main.css
@font-face {
  font-family: Quicksand;
  font-style: normal;
  font-weight: 300 700;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/quicksand/v20/6xKtdSZaM9iE8KbpRA_hK1QN.woff2)
    format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
    U+FEFF, U+FFFD;
}

html, body {
  height: 100%;
  width: 100%;
}

html {
  font-family: Quicksand, sans-serif;
  overflow: hidden;
  box-sizing: border-box;
}

body {
  padding: 0;
  margin: 0;
  overflow: hidden;
  background: var(--color-bg);
  transition: background .3s;
  --color-primary: #EB5757;
  --color-primary-dark: #d34444;
  --color-text: #323232;
  --color-text-inverse: #ffffff;
  --color-bg: #ffffff;
  --color-bg-dark: #eeeeee;
  --color-waves: #eeeeee;
  --color-shadow-box: #afafaf;
}

body.dark {
  --color-primary: #3e414a;
  --color-primary-dark: #24262b;
  --color-text: #ffffff;
  --color-text-inverse: #ffffff;
  --color-bg: #3e414a;
  --color-bg-dark: #303544;
  --color-waves: #2c2e33;
  --color-shadow-box: #000000;
}

#app {
  position: relative;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

#top-wave, #bottom-wave {
  z-index: 9;
  fill: var(--color-waves);
}

#top-wave {
  position: absolute;
  top: 0;

}

#bottom-wave {
  position: absolute;
  bottom: 0;
}

@media all and (min-width: 50rem) {
  body {
    background: var(--color-bg-dark);
    --color-waves: var(--color-primary);
  }
  #top-wave {
    height: 10rem;
  }
  #bottom-wave {
    display: none;
  }
  #app {
    height: 80vh;
    margin: 15vh auto;
    border-radius: 5px;
    width: 50rem;
    box-shadow: 0 0 6px 0px var(--color-shadow-box);
    background: var(--color-bg);
  }
}

